[package]
name = "clouddns-nat-helper"
version = "0.2.12"
edition = "2021"
description = "Autogenerate A records for NAT setups from AAAA records in cloud providers"
license-file = "LICENSE"
repository = "https://github.com/spacebird-dev/clouddns-nat-helper"
keywords = ["dns", "cloud", "cloudflare", "nat", "ipv4"]
categories = ["command-line-utilities"]
exclude = [
    ".github",
    "imgs",
    ".dockerignore",
    "Dockerfile",
    ".gitignore",
    ".pre-commit-config.yaml",
    "lcov.info",
    "Makefile.toml",
]

[dev-dependencies]
mockall = "0.12.1"
serde_json = "1.0.116"
chrono = "0.4.38"
totems = "0.2.7"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
cloudflare = { version = "0.11.0", features = [
    "rustls-tls",
    "blocking",
], default-features = false }
dnsclient = "0.1.19"
env_logger = "0.11.3"
http = "0.2.12"
itertools = "0.12.1"
log = "0.4.21"
mockall_double = "0.3.1"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["macros"] }

[patch.crates-io]
# using out fork until this gets implemented: https://github.com/cloudflare/cloudflare-rs/issues/219
cloudflare = { git = "https://github.com/spacebird-dev/cloudflare-rs", rev = "6188c63ed3c5716f86787e13d668cd75e6758c07" }
