[package]
name = "clouddns-nat-helper"
version = "0.2.17"
edition = "2021"
description = "Autogenerate A records for NAT setups from AAAA records in cloud providers"
license-file = "LICENSE"
repository = "https://github.com/spacebird-dev/clouddns-nat-helper"
keywords = ["dns", "cloud", "cloudflare", "nat", "ipv4"]
categories = ["command-line-utilities"]
exclude = [
    ".github",
    "imgs",
    ".dockerignore",
    "Dockerfile",
    ".gitignore",
    ".pre-commit-config.yaml",
    "lcov.info",
    "Makefile.toml",
]

[dev-dependencies]
mockall = "0.13.1"
serde_json = "1.0.138"
chrono = "0.4.39"
totems = "0.2.7"

[dependencies]
clap = { version = "4.5.28", features = ["derive", "env"] }
cloudflare = { version = "0.13.0", features = [
    "rustls-tls",
    "blocking",
], default-features = false }
dnsclient = "0.1.19"
env_logger = "0.11.6"
http = "1.2.0"
itertools = "0.14.0"
log = "0.4.25"
mockall_double = "0.3.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros"] }

[patch.crates-io]
# using out fork until this gets implemented: https://github.com/cloudflare/cloudflare-rs/issues/219
cloudflare = { git = "https://github.com/spacebird-dev/cloudflare-rs", rev = "244772ac4c028bd4dddccf0d7d7a3fac86585af2" }
